--- a/index.html
+++ b/index.html
@@ -18,37 +18,33 @@
     <title>Frontend Mentor | Order summary card</title>
   </head>
   <body>
+    <div class="bg-image"></div>
     <main>
-      <div class="container">
-        <div class="image-box">
-          <img
-            src="./images/illustration-hero.svg"
-            alt=""
-          />
+      <div class="image-box">
+        <img src="./images/illustration-hero.svg" alt="" />
+      </div>
+
+      <div class="text-box">
+        <h1>Order Summary</h1>
+
+        <p class="description">
+          You can now listen to millions of songs,
+          audiobooks, and podcasts on any device anywhere
+          you like!
+        </p>
+
+        <div class="price">
+          <img src="./images/icon-music.svg" alt="" />
+          <div>
+            <p>Annual Plan</p>
+            <p>$59.99/year</p>
+          </div>
+          <a href="#" class="Change">Change</a>
         </div>
 
-        <div class="text-box">
-          <h1>Order Summary</h1>
-
-          <p class="description">
-            You can now listen to millions of songs,
-            audiobooks, and podcasts on any device anywhere
-            you like!
-          </p>
-
-          <div class="price">
-            <img src="./images/icon-music.svg" alt="" />
-            <div>
-              <p>Annual Plan</p>
-              <p>$59.99/year</p>
-            </div>
-            <a href="#" class="Change">Change</a>
-          </div>
-
-          <div class="link">
-            <a href="#" class="btn">Proceed to Payment</a>
-            <a href="#">Cancel Order</a>
-          </div>
+        <div class="link">
+          <a href="#" class="btn">Proceed to Payment</a>
+          <a href="#">Cancel Order</a>
         </div>
       </div>
     </main>
